tests/functionalTests/valid/code/funcId.hs
main :: IO ();
main = do {
    a_ASF_s_fasdFA43j5d209f_;
};

a_ASF_s_fasdFA43j5d209f_ :: IO ();
a_ASF_s_fasdFA43j5d209f_ = putStr "";