tests/functionalTests/invalid/code/stringToPutInt.hs
main :: IO ();
main = putInt "string";